# axum-boilerplate

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20240417000000_create_users_table.sql
src/: db.rs  main.rs
src/api/: auth.rs  user.rs
src/db/: mod.rs  redis.rs
src/middleware/: auth.rs
src/models/: jwt.rs  mod.rs  user.rs
src/services/: auth_service.rs  cookie_service.rs  jwt_service.rs  mod.rs
src/tests/: auth.rs  helpers.rs  mod.rs
src/utils/: cookies.rs  jwt.rs  mod.rs
