[package]
name = "axum-boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = "0.4"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
http = "1.0"
uuid = { version = "1", features = ["v4"] }
tower-cookies = "0.11.0"
time = { version = "0.3", features = ["serde"] }
cookie = "0.18.0"
